Bug 153289 - Failed assertion when ungrouping after adding a text box to a subobject
Summary: Failed assertion when ungrouping after adding a text box to a subobject
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard:
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-01-31 08:57 UTC by Mike Kaganski
Modified: 2023-01-31 13:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-01-31 08:57:08 UTC
Using a debug build:

1. In a text document, add a couple of draw objects (e.g., circles);
2. Group them;
3. Enter the group;
4. Select one of the sub-object;
5. Right-click it, and choose "Add Text Box";
6. Exit group;
7. Ungroup it.

==> Assertion fails in SwTextBoxNode::GetTextBox.

After https://gerrit.libreoffice.org/c/core/+/136192.
Comment 1 Mike Kaganski 2023-01-31 09:08:01 UTC Comment hidden (noise)
Comment 2 Mike Kaganski 2023-01-31 09:10:24 UTC
https://gerrit.libreoffice.org/c/core/+/146327