tdf#153289: remove problematic assertion

It is unclear what it should guarantee; but at least when ungrouping,
SwDoc::UnGroupSelection copy-constructs a shared pointer (increasing
the refcount), then a copy-constructed argument passed to
lcl_CollectTextBoxesForSubGroupObj increases it once again, and then
the assertion expectedly fails.

Change-Id: I0cb5f303c67b2dc67d5583a9eb03fe405af3573d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146377
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>